--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -16,6 +16,13 @@
 			showOnly=${mode == 'show'},
 			enableField=${mode == 'enableField'}">
 
+			<!--  TODO cambiare il link con il link del vademecum -->
+			<div class="model-link with-margin-right" id="vademecum" th:if="${accreditamentoWrapper.accreditamento.isStandard() and accreditamentoWrapper.accreditamento.isBozza()
+				and (#authentication.principal.account.isSegreteria() || #authentication.principal.account.isProvider())}">
+				<i class="fa fa-file-text"></i>
+				<a id="vademecum_link" target="_blank" th:text="#{label.vademecum}" href="">Modello di esempio</a>
+			</div>
+
 			<div class="x_content">
 
 				<div id="tabs" class="" role="tabpanel" data-example-id="togglable-tabs">
@@ -1049,7 +1056,7 @@
 
 											<div th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}">
 												<label class="control-label">
-													<span th:class="label-show" th:text="#{label.pdf_verbale_valutazione_sul_campo}">richiesta_preavviso_rigetto</span>
+													<span th:class="label-show" th:text="#{label.pdf_verbale_valutazione_sul_campo}">pdf_verbale_valutazione_sul_campo</span>
 												</label>
 												<div>
 													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.id}|}"></a></div>
@@ -1232,7 +1239,7 @@
 												<!-- BLOCCO SEDE -->
 												<div class="item form-group">
 													<label class="control-label col-md-3 col-sm-3 col-xs-12">
-														<span class="label-show" th:text="#{label.sede_valutazione} + ':'">Sede della Valutazione</span>
+														<span class="label-show" th:text="#{label.sede_valutazione}">Sede della Valutazione</span><span>:</span>
 													</label>
 												</div>
 												<div class="item form-group">
@@ -1270,7 +1277,7 @@
 													<th:block th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.isPresenteLegaleRappresentante}">
 														<div class="item form-group">
 															<label class="control-label col-md-3 col-sm-3 col-xs-12">
-																<span class="label-show" th:text="#{label.legale_rappresentante} + ' ' + #{label.presente_alla_visita_verifica}">Legale Rappresentante</span>
+																<span class="label-show" th:text="#{label.legale_rappresentante} + ' ' + #{label.presente_alla_visita_verifica}">Legale Rappresentante</span><span>:</span>
 															</label>
 														</div>
 
@@ -1301,7 +1308,7 @@
 															</div>
 														</div>
 
-														<div class="item form-group">
+														<div class="item form-group" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.cartaIdentita != null}">
 															<label class="control-label col-md-3 col-sm-3 col-xs-12">
 																<span class="label-show" th:text="#{label.carta_identita}">Carta d'Identità</span>
 															</label>
@@ -1314,8 +1321,8 @@
 													<!-- BLOCCO DELEGATO PER LA VISITA DI VERIFICA -->
 													<th:block th:unless="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.isPresenteLegaleRappresentante}">
 														<div class="item form-group">
-															<label class="control-label col-md-4 col-sm-4 col-xs-12">
-																<span class="label-show" th:text="#{label.delegato_legale_rappresentante}">Delegato Legale Rappresentante</span>
+															<label class="control-label col-md-3 col-sm-3 col-xs-12">
+																<span class="label-show" th:text="#{label.delegato_legale_rappresentante}">Delegato Legale Rappresentante</span><span>:</span>
 															</label>
 														</div>
 
@@ -1346,7 +1353,7 @@
 															</div>
 														</div>
 
-														<div class="item form-group">
+														<div class="item form-group" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.cartaIdentita != null}">
 															<label class="control-label col-md-3 col-sm-3 col-xs-12">
 																<span class="label-show" th:text="#{label.carta_identita}">Carta d'Identità</span>
 															</label>
@@ -1355,9 +1362,9 @@
 															</div>
 														</div>
 
-														<div class="item form-group">
+														<div class="item form-group" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.delegato.delega != null}">
 															<label class="control-label col-md-3 col-sm-3 col-xs-12">
-																<span class="label-show" th:text="#{label.carta_identita}">Carta d'Identità</span>
+																<span class="label-show" th:text="#{label.delega}">Delega</span>
 															</label>
 															<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 																<div class="value"><span class="fa fa-download"> </span> <a th:href="@{|/file/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.delegato.delega.id}|}" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.delegato.delega.nomeFile}"></a></div>
@@ -1388,18 +1395,19 @@
 											<div class="clearfix"></div>
 										</div>
 										<div class="x_content">
-											<table class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+											<table id="tableStorico" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 												<thead>
 													<tr>
-														<th th:text="#{label.data}">Tipologia Sede</th>
-														<th th:text="#{label.stato}">Provincia</th>
-														<!--  th th:text="#{label.eseguito_da}">Provincia</th -->
+														<th th:text="#{label.data_inizio}">Data Inizio</th>
+														<th th:text="#{label.stato}">Stato</th>
+														<!--  th th:text="#{label.eseguito_da}">Account</th -->
 													</tr>
 												</thead>
 												<tbody>
 													<tr th:each="history, row : ${accreditamentoHistoryList}">
-														<td th:text="${history.dataFine != null} ? ${#temporals.format(history.dataFine,'dd/MM/yyyy - HH:mm')} : ''"></td>
-														<td th:text="${history?.stato.nome}"></td>
+														<td th:text="${history.dataInizio != null} ? ${#temporals.format(history.dataInizio,'dd/MM/yyyy - HH:mm')} : ''"></td>
+														<td th:unless="${history?.stato == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INS_ODG}" th:text="${history?.stato.nome}"></td>
+														<td th:if="${history?.stato == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INS_ODG}" th:text="${history?.stato.nome + ' ' + (history?.presaVisione ? #messages.msg('label.presa_visione_segreteria') : '')}"></td>
 														<!-- td th:text="${history?.account?.username}"></td -->
 													</tr>
 												</tbody>
@@ -1629,6 +1637,15 @@
 						"columnDefs": [
 							{ "targets": 3, "width": "70px", "sClass": "center" }
 						],
+					});
+
+					//table storico
+					$('#tableStorico').DataTable({
+						"bFilter" : false,
+						"bInfo" : false,
+						"bPaginate" : false,
+						"ordering" : false,
+						"autoWidth": false,
 					});
 
 				});
